--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>All About Me</h1>
-<p>This is a paragraph.</p>
+<p>this webpage is about my hobbies, favortie foods, acticies I participate in, academics, and etc.</p>
 
 </body>
 </html>
