--- a/index.html
+++ b/index.html
@@ -21,4 +21,14 @@
 </body>
 </html>
 <h1 style="color:lavender;">All About Me!</h1>
+<!DOCTYPE html>
+<html>
+<body style="background-color:green;">
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+
 
