--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1 style="color:lavender;">All About Me!</h1>
 <!DOCTYPE html>
 <html>
-<body style="background-color:green;">
+<body style="background-color:red;">
 
 <!DOCTYPE html>
 <html>
@@ -21,15 +21,6 @@
 <body>
 
 
-<p style="color:red;">my favorite jolly rancher is cherry flavor</p>
-
-
-
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+<p style="color:orange;">my favorite jolly rancher flavor is cherry</p>
 
 
