--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1 style="color:lavender;">All About Me!</h1>
 <!DOCTYPE html>
 <html>
-<body style="background-color:red;">
+<body style="background-color:powderblue;">
 
 <!DOCTYPE html>
 <html>
@@ -21,6 +21,18 @@
 <body>
 
 
-<p style="color:orange;">my favorite jolly rancher flavor is cherry</p>
+<p style="color:white;"<p>my favorite <sub> jolly rancher </sub> flavor is <sup>cherry</sup></p>
+<!DOCTYPE html>
+<html>
+<body>
+
+
+<button>Click me</button>
+
+</body>
+</html>
+
+
+
 
 
