--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
+
+<section>
+  <h1 style="color:lavender;">Family Background?</h1>
+  <p>Morocco is a country located in North Africa. Both of my parents were born there and are from there while my brother and I were born and raised here. although we were born here, we were raised with our culture. we speak a dilect of french, spanish, and arabic. </p>
+</section>
+
+<section>
+ <h1 style="color:lavender;">Some Facts That Have to do With Morocco</h1>
+  <p>Things like food, jewrely, places, cities, beaches, my cousins, traditional weddings, family gatherings, and much more make me happy. The part of Morocco my family and I are from is Casablanca. Casablanca is the capital of the country.
+  Morocco is well known for the foods that are made such as couscous, tagine, and harira. more</p>
+</section>
+
+</body>
+</html>
+
 
 
 
