--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Images on Another Server</h2>
+
+<img src=https://c.files.bbci.co.uk/229F/production/_121436880_bbcm_morocco_western_sahara_country-prof_041121.jpg"W3Schools.com" style="width:104px;height:142px;">
+
+</body>
+</html>
+
 
 
 
