--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<img src="https://c.files.bbci.co.uk/229F/production/_121436880_bbcm_morocco_western_sahara_country-prof_041121.jpg" alt="image">
 
 <button>Click me</button>
 
@@ -55,10 +55,6 @@
 
 <h2>Images on Another Server</h2>
 
-<img src=https://c.files.bbci.co.uk/229F/production/_121436880_bbcm_morocco_western_sahara_country-prof_041121.jpg"W3Schools.com" style="width:104px;height:142px;">
-
-</body>
-</html>
 
 
 
