--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 <body>
 
 <h2>Images on Another Server</h2>
+  <!DOCTYPE html>
+<html>
+<body>
+
+<h1>HTML Links</h1>
+
+<p><a href="https://www.bbcgoodfood.com/howto/guide/top-10-foods-try-morocco">moroccan foods</a></p>
+
+</body>
+</html>
+
+
 
 
 
