--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 </body>
 </html>
-<h1 style="color:lavender;">All About Me!</h1>
+<h1 style="color:lavender;">Morocco</h1>
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
@@ -13,7 +13,7 @@
 <body>
 
 
-<p>this webpage is about my hobbies, favortie foods, acticies I participate in, academics, and etc.</p>
+<p>this webpage gives info about Morocco</p>
 
 </body>
 </html>
