--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1 style="color:lavender;">Morocco</h1>
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:red;">
 
 <!DOCTYPE html>
 <html>
@@ -21,10 +21,7 @@
 <body>
 
 
-<p style="color:white;"<p>my favorite <sub> jolly rancher </sub> flavor is <sup>cherry</sup></p>
-<!DOCTYPE html>
-<html>
-<body>
+
 <img src="https://c.files.bbci.co.uk/229F/production/_121436880_bbcm_morocco_western_sahara_country-prof_041121.jpg" alt="image">
 
 
