--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<h2>Vertical Navigation Bar</h2>
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">flag</a></li>
+  <li><a href="#contact">food</a></li>
+  
 </body>
+</html>
+
+
+
+  </body>
 </html>
 <h1 style="color:lavender;">Morocco</h1>
 <!DOCTYPE html>
