--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
     </button>
   </body>
 </html>
-
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Title of the document</title>
+   </head>
+   <body>
+      <form action="https://youtu.be/eGMBd-WfNLk">
+         <button type="submit">Click me</button>
+      </form>
+   </body>
+</html>
 
 
 
